@@ -30,6 +30,31 @@
   overflow: auto;
 }
 
+#sieverules-list-filters thead td
+{
+  height: 20px;
+}
+
+#sieverules-list-filters thead td span
+{
+  position: absolute;
+  top: 2px;
+  left: 4px;
+  right: 25px;
+  height: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+#sieverules-list-filters thead td img
+{
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
+
 #sieverules-list-examples
 {
   position: absolute;
