@@ -23,7 +23,7 @@
 
 <div id="sieverules-list" class="uibox listbox">
 <div class="scroller withfooter">
-<roundcube:object name="sieveruleslist" class="listing" cellspacing="0" noheader="true" />
+<roundcube:object name="sieveruleslist" class="listing" cellspacing="0" noheader="true" activeicon="/this/tick.png" inactiveicon="/this/cross.png" />
 <roundcube:object name="sieverulesexamplelist" class="listing" cellspacing="0" noheader="true" />
 </div>
 <div class="boxfooter">
