@@ -1,7 +1,8 @@
 Roundcube Webmail SieveRules
 ============================
 
- * automatically activate first ruleset even when multi rulesets enabled
+ * show name and state of currently selected ruleset when multiple rulesets enabled
+ * automatically activate first ruleset even when multiple rulesets enabled
  * add option to use "friendly" names in :from params
  * rename default skin to classic (c40419bdfe)
  * rcube_ui > rcube_utils (r6091)
